# yafowil.widget.dict

./: .gitignore  CHANGES.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  base.cfg  bootstrap.sh  buildout.cfg  mx.ini  mxmake.yaml  pyproject.toml  rollup.conf.js  setup.cfg  setup.py
.github/workflows/: test_js.yaml  test_py.yaml
etc/: base.cfg
js/: karma-coverage.js  rollup.conf.js  rollup_bs5.conf.js
js/src/: bundle.js  bundle_bs5.js  dict.js  widget.js  widget_bs5.js
js/src/base/: dict.js
js/src/bootstrap5/: widget.js
js/src/default/: bundle.js  widget.js
js/tests/: test_dict.js
scripts/: coverage.sh  i18n.sh  rollup_bs5.sh  test.sh
scss/bootstrap/: styles.scss
scss/bootstrap5/: styles.scss  widget.scss
scss/default/: widget.scss
scss/plone5/: widget.scss
src/yafowil/widget/dict/: __init__.py  configure.zcml  example.py  tests.py  widget.py  widget.rst  widget.txt  yafowil.widget.dict.js  yafowil.widget.dict.js.map  yafowil.widget.dict.min.js  yafowil.widget.dict.min.js.map
src/yafowil/widget/dict/locales/: yafowil.widget.dict.pot
src/yafowil/widget/dict/locales/de/LC_MESSAGES/: yafowil.widget.dict.mo  yafowil.widget.dict.po
src/yafowil/widget/dict/locales/en/LC_MESSAGES/: yafowil.widget.dict.mo  yafowil.widget.dict.po
src/yafowil/widget/dict/resources/: widget.css  widget.js  widget.js.map  widget.min.js  widget.min.js.map
src/yafowil/widget/dict/resources/bootstrap/: widget.css
src/yafowil/widget/dict/resources/bootstrap5/: widget.css  widget.js  widget.min.css  widget.min.js
src/yafowil/widget/dict/resources/default/: widget.css  widget.js  widget.min.js
src/yafowil/widget/dict/resources/plone5/: widget.css  widget.min.css
src/yafowil/widget/dict/tests/: test_widget.py
