[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafowil.widget.dict"
version = "2.0a2.dev0"
description = "Dict/Mapping Widget for YAFOWIL"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
keywords = ["yafowil", "form", "widget", "dict", "mapping"]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "yafowil>2.1.99",
]

[project.optional-dependencies]
test = [
    "lxml",
    "pytest",
]

[project.entry-points."yafowil.plugin"]
register = "yafowil.widget.dict:register"
example = "yafowil.widget.dict.example:get_example"

[tool.hatch.build.targets.wheel]
packages = ["src/yafowil"]
[tool.zest-releaser]
create-wheel = true
